# ttihp0p3-z2a-logo-screensaver

./: .gitignore  art_config.json  info.yaml
.github/workflows/: docs.yaml  fpga.yaml  gds-art.yml  gds.yaml  test.yaml
art/: make_bitmap.py
docker/librelane-mock/: Dockerfile
gl/: tt_um_zerotoasic_logo_screensaver.nl.v
plugins/mock/: apply_art.py  pyproject.toml
plugins/mock/librelane_plugin_mock/: __init__.py
src/: bitmap_rom.v  config_tt_with_art.json
tools/: create_user_config.py  prepare_view_bundle.py
