[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "librelane_plugin_mock"
version = "0.0.1"
description = "Mock LibreLane plugin providing a passthrough step"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
include = ["librelane_plugin_mock"]

